--- a/Supervised Learning/1-The Perceptron/Perceptron.ipynb
+++ b/Supervised Learning/1-The Perceptron/Perceptron.ipynb
@@ -8,7 +8,17 @@
     "\n",
     "## Introduction\n",
     "\n",
-    "The sinking of the RMS Titanic is one of the most tragic maritime disasters in history. Using data from passengers and crew, this notebook aims to employ a Perceptron model to predict survival outcomes. This task involves processing a dataset with both numerical and categorical variables, handling missing data, standardizing inputs, and using a simple machine learning model to infer patterns."
+    "The Perceptron is often considered one of the earliest and simplest types of artificial neural networks, and it forms the bedrock of many modern machine learning algorithms. Developed in 1957 by Frank Rosenblatt, the Perceptron represents a foundational model in machine learning, valued for its simplicity and effectiveness in binary classification tasks.\n",
+    "\n",
+    "At its core, the Perceptron is a single-layer linear classifier, which operates on the principle of a linear decision boundary. This means that it draws a straight line (or a hyperplane in higher dimensions) to separate data points into two classes. The model takes a set of input signals and produces an output signal using a linear predictor function combining a set of weights with the feature vector.\n",
+    "\n",
+    "The Perceptron's simplicity lies in its single neuron structure, which mimics the biological neuron's function. It takes multiple binary inputs, processes them through weighted summation, and passes them through an activation function, which, in the case of the Perceptron, is typically a step function known as the sign activation function. The output is binary, corresponding to one of the two classes, hence its utility in binary classification problems.\n",
+    "\n",
+    "As a binary classifier, the Perceptron is particularly suited to problems where classes can be separated linearly. It determines the side of the decision boundary on which an input sample falls and associates it with a class label.\n",
+    "\n",
+    "In the context of this analysis, we will apply the Perceptron to a different but equally structured dataset known as the Titanic dataset. This dataset chronicles the survival status of individual passengers aboard the ill-fated maiden voyage of the RMS Titanic. It contains a range of features including socio-economic factors, demographics, and passenger information such as class, sex, age, and more.\n",
+    "\n",
+    "Our task is to predict a binary outcome—whether a passenger survived or did not survive the disaster. We'll process and feed these features into the Perceptron and let it learn the patterns that might suggest a passenger's likelihood of survival. Through this process, we aim to gain insights into the survival factors on the Titanic, all the while exploring the workings and applications of this classic machine learning model.\n"
    ]
   },
   {
