Upload The Perceptron subdirectory (revised)

--- a/Supervised Learning/1-The Perceptron/Perceptron.ipynb
+++ b/Supervised Learning/1-The Perceptron/Perceptron.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "As a binary classifier, the Perceptron is particularly suited to problems where classes can be separated linearly. It determines the side of the decision boundary on which an input sample falls and associates it with a class label.\n",
     "\n",
-    "In the context of this analysis, we will apply the Perceptron to a different but equally structured dataset known as the Titanic dataset. This dataset chronicles the survival status of individual passengers aboard the ill-fated maiden voyage of the RMS Titanic. It contains a range of features including socio-economic factors, demographics, and passenger information such as class, sex, age, and more.\n",
+    "In the context of this analysis, we will apply the Perceptron to a dataset known as the Titanic dataset. This dataset chronicles the survival status of individual passengers aboard the ill-fated maiden voyage of the RMS Titanic. It contains a range of features including socio-economic factors, demographics, and passenger information such as class, sex, age, and more.\n",
     "\n",
     "Our task is to predict a binary outcome—whether a passenger survived or did not survive the disaster. We'll process and feed these features into the Perceptron and let it learn the patterns that might suggest a passenger's likelihood of survival. Through this process, we aim to gain insights into the survival factors on the Titanic, all the while exploring the workings and applications of this classic machine learning model.\n"
    ]
