--- a/Supervised Learning/1-The Perceptron/Perceptron.ipynb
+++ b/Supervised Learning/1-The Perceptron/Perceptron.ipynb
@@ -10,7 +10,9 @@
     "\n",
     "The Perceptron is often considered one of the earliest and simplest types of artificial neural networks, and it forms the bedrock of many modern machine learning algorithms. Developed in 1957 by Frank Rosenblatt, the Perceptron represents a foundational model in machine learning, valued for its simplicity and effectiveness in binary classification tasks.\n",
     "\n",
-    "At its core, the Perceptron is a single-layer linear classifier, which operates on the principle of a linear decision boundary. This means that it draws a straight line (or a hyperplane in higher dimensions) to separate data points into two classes. The model takes a set of input signals and produces an output signal using a linear predictor function combining a set of weights with the feature vector.\n",
+    "At its core, the Perceptron is a single-layer linear classifier, which operates on the principle of a linear decision boundary. This means that it draws a straight line (or a hyperplane in higher dimensions) to separate data points into two classes. The model takes a set of input signals and produces an output signal using a linear predictor function combining a set of weights with the feature vector. It is a single neuron model with the sign activation function as depicted in the figure below.\n",
+    "\n",
+    "![Perceptron Model](ThePerceptronImage.png)\n",
     "\n",
     "The Perceptron's simplicity lies in its single neuron structure, which mimics the biological neuron's function. It takes multiple binary inputs, processes them through weighted summation, and passes them through an activation function, which, in the case of the Perceptron, is typically a step function known as the sign activation function. The output is binary, corresponding to one of the two classes, hence its utility in binary classification problems.\n",
     "\n",
@@ -23,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +177,7 @@
        "4    man        True  NaN  Southampton    no   True  "
       ]
      },
-     "execution_count": 64,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +246,7 @@
        "<Axes: title={'center': 'Survival Distribution'}>"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -281,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +351,7 @@
        "                ('classifier', Perceptron())])"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
