Upload Gradient Descent on Logistic Regression subdirectory

--- a/Supervised Learning/2-1-Gradient Desenct on Linear Regression/Gradient_Descent_Linear_Regression.ipynb
+++ b/Supervised Learning/2-1-Gradient Desenct on Linear Regression/Gradient_Descent_Linear_Regression.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Gradient Descent for Linear Regression\n",
+    "# Gradient Descent - Linear Regression\n",
     "\n",
     "## Introduction\n",
     "Welcome to our exploration of the Gradient Descent optimization algorithm within the context of linear regression. In this notebook, we'll apply Gradient Descent to the California Housing dataset to predict housing prices based on various features. This method is crucial for finding the best-fit parameters that minimize the error in predictions, making it invaluable for regression tasks.\n",
@@ -316,7 +316,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
