Upload Neural Networks subdirectory (revised)

--- a/Supervised Learning/3-Neural Networks/Neural_Network_MLP.ipynb
+++ b/Supervised Learning/3-Neural Networks/Neural_Network_MLP.ipynb
@@ -34,14 +34,14 @@
     "\n",
     "## Advantages and Disadvantages of MLP\n",
     "\n",
-    "### Advantages\n",
+    "### Advantages:\n",
     "1. **Versatility**: MLPs are adept at handling various types of data and tasks, including but not limited to classification, regression, and pattern recognition. Their flexibility makes them suitable for a wide array of applications across different industries.\n",
     "2. **Non-linearity**: One of the core strengths of MLPs is their ability to model complex non-linear relationships within the data. This capability is due to the non-linear activation functions used within the network layers.\n",
     "3. **Feature Learning**: Unlike traditional machine learning models that require manual feature extraction, MLPs have the inherent ability to learn relevant features directly from the data. This leads to a more robust model that improves as it learns more from the data.\n",
     "4. **Scalability**: MLPs can be easily scaled by increasing the number of hidden layers or neurons per layer. This adaptability allows the network to become more complex and capable as needed.\n",
     "5. **Availability**: MLPs are supported extensively across popular machine learning libraries such as TensorFlow, Keras, and PyTorch, making them accessible for both beginners and advanced practitioners.\n",
     "\n",
-    "### Disadvantages\n",
+    "### Disadvantages:\n",
     "1. **Overfitting**: MLPs have a tendency to overfit, particularly when the model is too complex relative to the amount of available training data. This can lead to excellent performance on training data but poor generalization to new, unseen data.\n",
     "2. **Hyperparameter Sensitivity**: The performance of MLPs is highly dependent on the selection of hyperparameters such as the learning rate, number of layers, and batch size. Finding the optimal set of hyperparameters often requires extensive experimentation.\n",
     "3. **Computational Intensity**: Training MLPs, especially those with many layers and neurons, can be computationally demanding and slow, requiring powerful hardware and efficient programming.\n",
