Upload Decision Trees subdirectory (revised)

--- a/Supervised Learning/5-Decision Trees/Decesion_Trees.ipynb
+++ b/Supervised Learning/5-Decision Trees/Decesion_Trees.ipynb
@@ -202,7 +202,7 @@
     "\n",
     "### Dataset\n",
     "\n",
-    "For the Regression Tree part, we will use the Titanic dataset, focusing on the 'Fare' column as the target variable for our regression task.\n",
+    "For the Regression Tree part, we will use the Titanic dataset, focusing on the 'fare' column as the target variable for our regression task.\n",
     "\n",
     "- The dataset includes passenger features such as class, sex, age, and number of siblings/spouses aboard.\n",
     "- Our goal is to predict the fare paid using these features, which can provide insights into the socio-economic distribution of the Titanic's passengers.\n",
